[package]
name = "pdb-fetch"
version = "0.1.0"
edition = "2021"
authors = ["PY <py@pypy.info>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/py0x/pdb-fetch"
homepage = "https://github.com/py0x/pdb-fetch"
description = """
Download Multiple Files from the PDB Archive.
"""
keywords = ["pdb", "rcsb", "mmcif"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0"
futures = "0.3.24"
async-channel = "1.7.1"
clap = { version = "3.2.22", features = ["derive"] }